--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h2>Currency Converter</h2>
-
+        <img src="money.png">
 
         <form>
             <!-- <div class="amount">
@@ -149,8 +149,8 @@
                 </div>
             </div>
             <div class="amount">
-                <p>Enter Amount</p>
-                <input type="text" name="" id="input_currency">
+<!--                 <p>Enter Amount</p> -->
+                <input type="text" name="" id="input_currency" placeholder="Enter amount">
             </div>
             <div class="msg">1USD = 80INR</div>
 
